# litrev

./: .gitignore  .mcp.json  CONTINUATION-PROMPT.md  DEFERRED.md  MCP_CONTEXT.md  MIGRATION_PLAN.md  PLAN.md  PROMPT_RECOS.md  README.md  REVIEW.md  REVIEW_EXTRACT.md  REVIEW_MCP.md  REVIEW_SCREEN.md  REVIEW_SEARCH.md  REVIEW_SYNTHESIZE.md  ROADMAP.md  ROBUST.md  SKILL.md  TODO.md  exemple_rapport.md  features.md  pyproject.toml  roadmap_env_fix.md
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
agents/: audit_fidelity.md  audit_methodology.md
assets/: review_template.md
evals/: evals.json
example/: PROMPT.md  review_logs.md  review_synthese.md
example_new/: PROMPT_RECOS.md
example_old/: CONTEXT_SUMMARY.md
example_v2/: PROMPT.md
mcp/: README.md  pyproject.toml
mcp/docs/: semantic-scholar-api-key-form.md
mcp/review/: openalex_q1.json  pubmed_q1.json  s2_q1.json
mcp/src/litrev_mcp/: __init__.py  server.py
mcp/src/litrev_mcp/lib/: bibtex.py  dedup.py  enrich.py  fulltext.py  http.py  parsers.py  patterns.py  pubmed.py
mcp/src/litrev_mcp/tools/: abstracts.py  claims.py  fulltext.py  gates.py  import_corpus.py  openalex_search.py  pubmed_search.py  s2_search.py  search.py  snowball.py  verify.py
mcp/tests/: test_abstracts.py  test_audit_claims.py  test_bibtex.py  test_dedup.py  test_fulltext.py  test_gates.py  test_generate_bibliography.py  test_import_corpus.py  test_openalex_search.py  test_parsers.py  test_patterns.py  test_process_results.py  test_pubmed_search.py  test_s2_search.py  test_snowball.py  test_verify_matching.py
(+178 files in other folders)
